Realize pattern Repository, Identity Map, Unit of Work, Тестування